Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "better_restaurant"
+    "better_restaurant(frontier_restaurant, fork_fig)"
    ]
   },
   {
