Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,22 +157,22 @@
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return list(restaurant['name'])\n",
     "    else:\n",
-    "        return alternative['name']\n",
+    "        return list(alternative['name'])\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fork & Fig'"
+       "['F', 'o', 'r', 'k', ' ', '&', ' ', 'F', 'i', 'g']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
