Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        better_restaurant.appen\n",
+    "        better_restaurant.append(restauran)\n",
     "    else:\n",
     "        return 'name' == alternative\n",
     "    pass"
