Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        better_restaurant.append(restaurant)\n",
+    "        solution.append(restaurant)\n",
     "    else:\n",
-    "        better_restaurant.append(alternative)\n",
+    "        solution.append(alternative)\n",
     "    pass"
    ]
   },
