Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,8 +167,8 @@
     "        solution.append(restaurant)\n",
     "    else:\n",
     "        solution.append(alternative)\n",
-    "    pass\n",
-    "return solution"
+    "    return \n",
+    "    pass"
    ]
   },
   {
