Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,6 +154,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
+    "    solution \n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        solution.append(restaurant)\n",
     "    else:\n",
