Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,12 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    solution = None\n",
+    "    solution = []\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        solution.append(restaurant)\n",
     "    else:\n",
