--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     "        solution.append(restaurant)\n",
     "    else:\n",
     "        solution.append(alternative)\n",
-    "    return solution\n",
+    "    return dict.fromkeys(solution\n",
     "    pass"
    ]
   },
