--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
     "        solution.append(restaurant)\n",
     "    else:\n",
     "        solution.append(alternative)\n",
-    "    return dict.fromkeys(solution,\n",
+    "    return dict.fromkeys(solution)\n",
     "    pass"
    ]
   },
