Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     "        solution.append(restaurant)\n",
     "    else:\n",
     "        solution.append(alternative)\n",
-    "    return dict.fromkeys(solution,\"better\")\n",
+    "    return solution,\"better\")\n",
     "    pass"
    ]
   },
