Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,9 +154,9 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    solution = []\n",
+    "    solution = {}\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        solution.append(restaurant)\n",
+    "        solution == restaurant\n",
     "    else:\n",
     "        solution.append(alternative)\n",
     "    return solution\n",
