Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,6 +196,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
+    "    solution = {}\n",
+    "    if len(restaurant['p'])\n",
     "    pass"
    ]
   },
