Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    solution = {}\n",
-    "    if len(restaurant['p'])\n",
+    "    if len(restaurant['price']) > len(alternative['price']):\n",
+    "        \n",
     "    pass"
    ]
   },
