--- a/index.ipynb
+++ b/index.ipynb
@@ -197,8 +197,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    solution = {}\n",
-    "    if len(restaurant['price']) > len(alternative['price']):\n",
-    "        \n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
+    "        solution = restaurant\n",
     "    pass"
    ]
   },
