Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,6 +199,9 @@
     "    solution = {}\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        solution = restaurant\n",
+    "    else:\n",
+    "        solution = alternative\n",
+    "    return solution\n",
     "    pass"
    ]
   },
