Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,6 +211,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cheaper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(cheaper_restaurant(fork_fig, frontier_restaurant)['name']) # 'Frontier Restaurant'\n",
     "print(cheaper_restaurant(frontier_restaurant, fork_fig)['name']) # 'Frontier Restaurant'"
    ]
