Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    \n",
+    "    for restaurant in restaurants:\n",
+    "        \n",
     "    pass"
    ]
   },
