Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,8 +294,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    solution\n",
     "    for restaurant in restaurants:\n",
-    "        \n",
+    "        if \n",
     "    pass"
    ]
   },
