--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    solution\n",
+    "    solution = {}\n",
     "    for restaurant in restaurants:\n",
     "        if \n",
     "    pass"
