Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
     "def open_restaurants(restaurants):\n",
     "    solution = {}\n",
     "    for restaurant in restaurants:\n",
-    "        if \n",
+    "        if restaurant\n",
     "    pass"
    ]
   },
