--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
     "def open_restaurants(restaurants):\n",
     "    solution = {}\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant\n",
+    "        if restaurant['is_closed']\n",
     "    pass"
    ]
   },
