Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,8 @@
     "def open_restaurants(restaurants):\n",
     "    solution = {}\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']\n",
+    "        if restaurant['is_closed'] == False:\n",
+    "            \n",
     "    pass"
    ]
   },
