Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
     "    solution = {}\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            \n",
+    "            appe\n",
     "    pass"
    ]
   },
