Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,10 +294,11 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    solution = {}\n",
+    "    solution = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            appe\n",
+    "            append.solution(restaurant)\n",
+    "\n",
     "    pass"
    ]
   },
