--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            append.solution(restaurant)\n",
-    "\n",
+    "    return solution\n",
     "    pass"
    ]
   },
