Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        solution = restaurant\n",
-    "    else:\n",
-    "        solution = alternative\n",
-    "    return solution\n",
+    "        return restaurant\n",
+    "    return alternative\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
