Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,12 +193,9 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    solution = {}\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
-    "        solution = restaurant\n",
-    "    else:\n",
-    "        solution = alternative\n",
-    "    return solution\n",
+    "        return restaurant\n",
+    "    return alternative\n",
     "    pass"
    ]
   },
