--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    solution = []\n",
+    "    open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            solution.append(restaurant)\n",
