Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,16 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == False:\n",
-    "            solution.append(restaurant)\n",
-    "    return solution\n",
+    "        if not restaurant['is_closed']:\n",
+    "            open.append(restaurant)\n",
+    "    return open\n",
     "    pass"
    ]
   },
